# agentic-document-extraction

./: .gitignore  .pre-commit-config.yaml  AGENT.md  LOG.md  LOGS.md  PROMPT.md  README.md  TASKS.md  api.http  main.py  pyproject.toml
docs/: architecture.md  migration-guide.md
logs/: 0044-implement-analyze-form-tool.md  0045-implement-analyze-signature-tool.md  0046-implement-analyze-diagram-tool.md  0047-implement-analyze-handwriting-tool.md  0048-implement-analyze-image-tool.md  0049-implement-analyze-logo-tool.md  0050-implement-analyze-math-tool.md  0051-refactor-agent-always-provide-tools.md  0052-remove-injectedstate-try-except.md  0053-improve-tool-descriptions.md  0054-tool-instructions-system-prompt.md  0056-unit-tests-tool-based-agent.md  0057-native-excel-parsing-support.md  0058-pii-redaction-and-retention.md  0059-docket-lifespan-initialization.md  2026-01-22-bug-fix-png-image-file-support.md  2026-01-22-e2e-test-coupon-code-form-png.md  2026-01-22-e2e-testing-results-extract-endpoint.md  2026-01-22-feature-date-format-normalization.md  2026-01-22-fix-tesseract-ocr-documentation.md  2026-01-23-fix-low-confidence-scores.md  2026-01-23-fix-phone-number-normalization.md  2026-01-23-fix-skills-category-prefixed.md  2026-01-23-fix-spurious-null-value-warnings.md  2026-01-24-feature-langchain-agent-abstraction.md  2026-01-24-fix-coupon-required-fields-missing.md  2026-01-24-fix-invoice-date-format-false-positive.md  2026-01-24-fix-null-optionals-schema-violation.md  2026-01-24-local-run-fixtures.md  2026-01-25-feature-docket-job-manager.md  2026-01-25-feature-langchain-agentic-loop-tools.md  2026-01-25-feature-paddleocr-vl-ocr.md  2026-01-26-feature-analyze-chart-tool.md  2026-01-26-feature-analyze-table-tool.md  2026-01-26-feature-layoutreader-reading-order.md  2026-01-27-refactor-analyze-table-tool.md  2026-01-27-refactor-extraction-agent-tool-based.md  2026-01-27-refactor-region-tool-input.md  2026-01-28-docs-update-architecture-documentation.md  2026-01-28-refactor-tool-agent-verification-loop.md  (+2 more)
ocr/: text_extraction.py
shims/: langchain_compat.py
tasks/: 0001-environment-setup.md  0002-fastapi-service-bootstrap.md  0003-document-upload-endpoint.md  0004-document-format-detection.md  0005-schema-validation.md  0006-text-extraction-text-based.md  0007-langchain-document-loaders.md  0008-langchain-llm-integration.md  0009-json-markdown-output-text.md  0010-text-extraction-visual-ocr.md  0011-layout-detection-hf.md  0012-reading-order-detection.md  0013-region-based-visual-extraction.md  0014-visual-document-synthesis.md  0015-extraction-planning-agent.md  0016-quality-verification-agent.md  0017-iterative-refinement-loop.md  0018-async-processing-job-management.md  0019-error-handling-logging.md  0020-configuration-management.md  0021-api-documentation-examples.md  0022-end-to-end-testing-bug-fixes.md  0023-bug-png-image-file-support.md  0024-issue-date-format-inconsistency.md  0025-issue-low-confidence-scores.md  0026-issue-spurious-null-value-warnings.md  0027-issue-skills-category-prefixed.md  0028-issue-phone-number-format.md  0029-issue-tesseract-ocr-not-installed.md  0030-issue-invoice-date-format-false-positive.md  0031-issue-coupon-required-fields-missing.md  0032-issue-null-optionals-schema-violation.md  0033-replace-direct-llm-invocations.md  0034-refactor-agentic-loops-langchain.md  0035-replace-tesseract-paddleocr-vl.md  0036-replace-job-manager-docket.md  0037-implement-layoutreader-reading-order.md  0038-implement-analyze-chart-tool.md  0039-implement-analyze-table-tool.md  0040-refactor-extraction-agent-tool-based.md  (+20 more)
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_lifespan_docket_worker.py
(+101 files in other folders)
