[project]
name = "agentic-document-extraction"
version = "0.1.0"
description = "Vision-first, agentic document extraction system as a FastAPI service"
readme = "README.md"
authors = [
    { name = "rjolaverria", email = "rjolaverria@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "paddleocr>=3.3.3",
    "paddlepaddle>=3.3.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydocket>=0.17.1",
    "pypdf>=6.6.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.21",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
agentic-document-extraction = "agentic_document_extraction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.14.13",
    "types-jsonschema>=4.26.0.20260109",
    "pandas-stubs>=2.3.3.260113",
    "types-chardet>=5.0.4.6",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "transformers.*",
    "torch.*",
    "magic",
    "pdfplumber",
    "pdfplumber.*",
    "paddleocr",
    "paddleocr.*",
    "paddle",
    "paddle.*",
    "pdf2image",
    "pdf2image.*",
    "docket",
    "docket.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
